--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -91,9 +91,10 @@
             <li><a href="#platby-v-rámci-areálu">Platby v rámci areálu</a></li>
             <li><a href="#vstup-do-areálu">Vstup do areálu</a></li>
             <li><a href="#jídlo-a-pití">Jídlo a pití</a></li>
-            <li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a
+<li><a href="#počasí-a-koupání">Počasí a koupání</a></li>            
+<li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a
                 doprovodný program</a></li>
-            <li><a href="#počasí-a-koupání">Počasí a koupání</a></li>
+            <li><a href="#počasí-a-koupání">Flow Ateliér na Studnici</a></li>
             <li><a href="#mapa">Mapa</a></li>
           </ol>
         </nav>
