--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -94,7 +94,7 @@
 <li><a href="#počasí-a-koupání">Počasí a koupání</a></li>            
 <li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a
                 doprovodný program</a></li>
-            <li><a href="#počasí-a-koupání">Flow Ateliér na Studnici</a></li>
+            <li><a href="#program-flow-atelieru-na-studnici">Flow Ateliér na Studnici</a></li>
             <li><a href="#mapa">Mapa</a></li>
           </ol>
         </nav>
