--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -152,8 +152,7 @@
       <header id="info">
         <h2>Vstupenky</h2>
       </header>
-      <p>Vstupenky pravděpodobně nebudou dostupné na místě, jelikož kapacita
-        je omezená. Doporučujeme proto využít předprodeje na&nbsp;<a
+      <p>Vstupenky jsou dostupné i místě, ale je možné stále využít předprodeje na&nbsp;<a
           href="https://tickets.nfctron.com/event/eupathia/studnice-fest-2025">NFCTron.cz</a>. V&nbsp;ceně vstupenky je i&nbsp;stanové
         městečko. Parkovací stání se platí zvlášť.</p>
 
