--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -152,8 +152,8 @@
       <header id="info">
         <h2>Vstupenky</h2>
       </header>
-      <p>Vstupenky jsou dostupné i místě, ale je možné stále využít předprodeje na&nbsp;<a
-          href="https://tickets.nfctron.com/event/eupathia/studnice-fest-2025">NFCTron.cz</a>. V&nbsp;ceně vstupenky je i&nbsp;stanové
+      <p>Vstupenky na 2026 jsou již v předprodeji na&nbsp;<a
+          href="https://tickets.nfctron.com/event/eupathia/studnice-fest-2026">NFCTron.cz</a>. V&nbsp;ceně vstupenky je i&nbsp;stanové
         městečko. Parkovací stání se platí zvlášť.</p>
 
       <div class="tickets__list">
