--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -228,12 +228,12 @@
       <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
             integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin>`);
 
-    const API_KEY = "S9n6dfE_8AfjsNvRxSwAmFV4-1z5tfk5W7IUajp2D3I";
     const map = L.map("map", {
       center: [49.752936007489765, 15.930369570851326],
       zoom: 16
     });
-    L.tileLayer(`https://api.mapy.cz/v1/maptiles/outdoor/256/{z}/{x}/{y}?apikey=${API_KEY}`, {
+    // TODO: proxy via functions and keep it in cache for 1 day
+    L.tileLayer("https://www.studnicefest.cz/map/{z}-{x}-{y}", {
       minZoom: 0,
       maxZoom: 19,
       detectRetina: true,
