--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -60,7 +60,7 @@
       aspect-ratio: 1.91;
       background-image:
         linear-gradient(to top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.0) 33%),
-        url("{{ images["info-bg.jpg"].public_id | cloudinaryUrl() }}");
+        url("{{ images["info-bg.avif"].public_id | cloudinaryUrl() }}");
       background-repeat: no-repeat;
       background-size: cover;
       padding-inline: 2em;
@@ -91,7 +91,7 @@
             <li><a href="#platby-v-rámci-areálu">Platby v rámci areálu</a></li>
             <li><a href="#vstup-do-areálu">Vstup do areálu</a></li>
             <li><a href="#jídlo-a-pití">Jídlo a pití</a></li>
-<li><a href="#počasí-a-koupání">Počasí a koupání</a></li>            
+<li><a href="#počasí-a-koupání">Počasí a koupání</a></li>
 <li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a
                 doprovodný program</a></li>
             <li><a href="#program-flow-atelieru-na-studnici">Flow Ateliér na Studnici</a></li>
