--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -66,7 +66,7 @@
       </header>
       {% for post in filterNews(news) | take(5) %}
         {% set image = images[post.image] %}
-        {% set metadata =  images[post.name].metadata %}
+        {% set metadata =  images[post.image].metadata %}
         <article>
           <a href="/novinky/#{{ post.time }}">
             <time datetime="{{ post.time }}">{{ post.time | formatDate }}</time>
