--- a/src/html/novinky/index.njk
+++ b/src/html/novinky/index.njk
@@ -74,8 +74,8 @@
   <main>
     <h2>Novinky</h2>
     <div class="article-list">
-      {% for post in filterNews(news) %}
-        {% set image = images[post.image] %}
+      {% for post in filterNews(collections.news) %}
+        {% set image = collections.images[post.image] %}
         {% set metadata =  image.metadata %}
         <article id="{{ post.time }}"
                  class="{{ "has-image" if image }} {{ "has-long-text" if post.text.length > 200 }} {{ "has-xlong-text" if post.text.length > 400 }}">
