--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -53,17 +53,29 @@
     main > hgroup {
       color: #fff;
       grid-column: wide;
-      border-radius: var(--corner-radius);
       display: flex;
       flex-flow: column;
       justify-content: flex-end;
       aspect-ratio: 1.91;
-      background-image:
-        linear-gradient(to top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.0) 33%),
-        url("{{ images["info-bg.avif"].public_id | cloudinaryUrl() }}");
+      padding-inline: 2em;
+      border-radius: var(--corner-radius);
+      position: relative;
+    }
+
+    main > hgroup::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+      border-radius: var(--corner-radius);
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.0) 33%),
+      url("{{ collections.images["info-bg.avif"].public_id | cloudinaryUrl() }}");
       background-repeat: no-repeat;
       background-size: cover;
-      padding-inline: 2em;
+    }
+
+    main > hgroup > * {
+      z-index: 2;
     }
 
     main > hgroup > h2 {
@@ -74,7 +86,7 @@
 
 {% block content %}
   <main>
-    <hgroup>
+    <hgroup style="--lqip: {{ collections.images["info-bg.avif"].metadata.lqip }}">
       <h2>Důležité informace</h2>
       <p>Co by měl každý návštěvník vědět, než na Studnici vyrazí?</p>
     </hgroup>
@@ -91,8 +103,8 @@
             <li><a href="#platby-v-rámci-areálu">Platby v rámci areálu</a></li>
             <li><a href="#vstup-do-areálu">Vstup do areálu</a></li>
             <li><a href="#jídlo-a-pití">Jídlo a pití</a></li>
-<li><a href="#počasí-a-koupání">Počasí a koupání</a></li>
-<li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a
+            <li><a href="#počasí-a-koupání">Počasí a koupání</a></li>
+            <li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a
                 doprovodný program</a></li>
             <li><a href="#program-flow-atelieru-na-studnici">Flow Ateliér na Studnici</a></li>
             <li><a href="#mapa">Mapa</a></li>
